# paiva-burning-memory

./: .gitignore  Cargo.toml  README.md  TODOLIST.md
src/: main.rs
src/utils/: mod.rs
src/utils/commands/: delete.rs  edit.rs  get.rs  help.rs  mod.rs  ping.rs  post.rs  today.rs
src/utils/database/: delete.rs  edit.rs  get.rs  mod.rs  post.rs
src/utils/docs/: commands.rs  mod.rs
src/utils/services/: mod.rs  post.rs
src/utils/types/: commands.rs  edit.rs  mod.rs  post.rs
