[package]
name = "paiva-burning-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.1", features = ["collector"] }
sqlx = { version = "0.8.2", features = [ "runtime-async-std", "tls-rustls", "postgres", "chrono" ] }
url = "2.5.2"
shuttle-runtime = "0.49"
shuttle-serenity = "0.49"
reqwest = "0.12.9"
musicbrainz_rs = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
